fixed display video wrap on desktop version

--- a/css/style.css
+++ b/css/style.css
@@ -1292,7 +1292,7 @@ li {
 
 @media (min-width: 1200px) {
   .video-wrap {
-    padding-bottom: 46.25%;
+    padding-bottom: 56.25%;
   }
 }
 
